apps/base/moodle/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: moodle-internal
  namespace: apps
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`moodle.local.kagiso.me`)
      kind: Rule
      services:
        - name: moodle
          port: 80
